* [2017-07-21] added threshold DSS/DSA scheme of Canetti et al. (ASTC, DSS)
* [2017-06-27] DKG-tools: improved interactive version of dkg-decrypt
* [2017-06-20] added Pedersen's verifiable secret sharing (VSS) protocol
* [2017-06-15] RBC: added sequence counter separation for subprotocols
* [2017-06-12] RFC4880: added support for other hash algorithms in DSA
* [2017-06-03] DKG-tools: added options "-i" and "-o" for dkg-decrypt
* [2017-06-02] DKG-tools: added support for other symmetric algorithms
* [2017-06-02] RFC4880: added generic SymmetricDecrypt() for full RFC compliance
* [2017-05-25] release 1.3.1 of LibTMCG
* [2017-05-25] VSSHE: added a simple variant of SetupGenerators_publiccoin()
* [2017-05-19] DKG: use very strong randomness from libgcrypt (long term keys)
* [2017-05-15] RFC4880: added implementation of Partial Body Lengths
* [2017-05-13] release 1.3.0 of LibTMCG
* [2017-05-13] moved to GNU FDL v1.3
* [2017-05-04] fixed RBC implementation for artificial case where t=0
* [2017-04-27] improved timing attack resilience of mpz_spowm()
* [2017-04-26] improved timing attack resilience of mpz_fspowm()
* [2017-04-23] AIO: bugfixes and change to EtA paradigma 
* [2017-04-12] fixed some small bugs found by coverity scan
* [2017-03-31] added simple manpages for DKG-tools
* [2017-03-26] added general interpolation for DKG and changed dkg-decrypt 
* [2017-02-04] added check (t-mpz) to spot optimizations of mpz_fspowm()
* [2017-01-25] DKG, ASTC: fixed robustness issues in Generate() and Share()
* [2017-01-21] VTMF: added generation and check of canonical group generator
* [2017-01-20] VTMF: improved NIZK generation (added group parameter hashing)
* [2016-12-31] release 1.2.0 of LibTMCG
* [2016-12-24] added GNUnet integration for DKG-tools
* [2016-11-14] added a very limited interface for OpenPGP (cf. RFC 4880) 
* [2016-03-26] improved complexity of hash function g() used as random oracle
* [2016-03-24] mpz_shash* using now hash function g() instead of h()