@@ -1,3 +1,5 @@
+* [2017-07-22] RFC4880: interface of PacketS{ub,sb}Encode() changed for DSA
+* [2017-07-22] DKG-tools: added option "-s" for generating a shared DSA key
 * [2017-07-21] added threshold DSS/DSA scheme of Canetti et al. (ASTC, DSS)
 * [2017-06-27] DKG-tools: improved interactive version of dkg-decrypt
 * [2017-06-20] added Pedersen's verifiable secret sharing (VSS) protocol
